--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ a{
 
 body{
     background-color:#696969;
+    
 }
 
 .background {
@@ -97,3 +98,114 @@ body{
 }
 
 
+.project{
+    position: relative;
+    display: flex;
+    max-width: 100%;
+    width: 97%;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    background-color:	#808080;
+    border: none;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    border-radius: 5px;
+
+
+}
+
+.ContactInfo{
+    position: absolute;
+    top: 25%;
+    left: 35%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-flow:column wrap;
+}
+
+.ContactContent{
+    background-color:	#808080;
+    border: none;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    border-radius: 5px;
+
+
+}
+
+@media screen and (min-width: 576px) {
+    .summary{
+        display: flex;
+        justify-content: center;
+        flex-flow: row wrap;
+    }
+
+    .project{
+        display: flex;
+        justify-content: center;
+        flex-flow: column wrap;
+        padding: 1%;
+    }
+
+    .IceCreamTruck{
+        width: 100%;
+        height: auto;
+    }
+
+}
+
+@media (min-width: 768px){
+    .summary{
+        display: flex;
+        justify-content: center;
+        flex-flow: row wrap;
+    }
+
+    .project{
+        display: flex;
+        justify-content: center;
+        flex-flow: column wrap;
+
+
+    }
+    .IceCreamTruck{
+        width: 100%;
+        height: auto;
+
+    }
+}
+
+@media (min-width: 1200px){
+    .summary{
+        display: flex;
+        max-width: 100%;
+        flex-flow: row wrap;
+        justify-content: space-around;
+        align-items: top;
+    
+    }
+
+
+    .project{
+        display: flex;
+        justify-content: center;
+        flex-flow: column wrap;
+
+
+    }
+
+}
